--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,20 @@
       </nav>
       <ul class="contacts">
         <li class="contacts-element-1">
-          <a class="info" href=""> info@devstudio.com</a>
+          <a class="info icon-mail" href="">
+            <svg class="icon-mail" width="16" height="12">
+              <use href="./images/sprite.svg#icon-mail"></use>
+            </svg>
+            info@devstudio.com</a
+          >
         </li>
         <li class="contacts-element-2">
-          <a class="info" href="">+38 096 111 11 11</a>
+          <a class="info icon-smartphone" href="">
+            <svg class="icon-smartphone" width="10" height="15">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+            </svg>
+            +38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -235,36 +245,49 @@
           <!--Hero секция-->
           <ul class="social-link-list">
             <li class="active-social-link-footer">
-              <a href="" aria-label="Ссылка на Instagram"
-                ><img
-                  class="img-social-footer"
-                  src="./images/instagram.svg"
-                  alt="instagram"
-              /></a>
+              <a
+                class="footer-social-link"
+                href=""
+                width="44"
+                height="44"
+                aria-label="Ссылка на Instagram"
+              >
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a href="" aria-label="Ссылка на Twitter"
-                ><img
-                  class="img-social-footer"
-                  src="./images/twitter.svg"
-                  alt="Twitter"
-              /></a>
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на Twitter"
+              >
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a href="" aria-label="Ссылка на Facebook"
-                ><img
-                  class="img-social-footer"
-                  src="./images/facebook.svg"
-                  alt="Facebook"
-              /></a>
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на Facebook"
+              >
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a href="" aria-label="Ссылка на LinkedIn"
-                ><img
-                  class="img-social-footer"
-                  src="./images/linkedin.svg"
-                  alt="LinkedIn"
-              /></a>
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на LinkedIn"
+                ><svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
