--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
       <ul class="contacts">
         <li class="contacts-element-1">
           <a class="info icon-mail" href="">
-            <svg class="icon-mail" width="16" height="11.2"> <use
-              href="./images/sprite.svg#icon-mail"> 
-              </use>
+            <svg class="icon-mail" width="16" height="12"> 
+              <use
+              href="./images/sprite.svg#icon-mail"></use>
             </svg>
             info@devstudio.com</a>
         </li>
         <li class="contacts-element-2">
           <a class="info icon-smartphone" href="">
+            <svg class="icon-smartphone" width="10" height="15">
+              <use href="./images/sprite.svg#icon-smartphone"></use>
+            </svg>
             +38 096 111 11 11</a>
         </li>
       </ul>
@@ -193,11 +196,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                  <img
-                      class="img-team-social-element"
-                      src="./images/instagram.svg"
-                      alt="instagram"
-                    />
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -206,11 +207,9 @@
                     href=""
                     aria-label="Ссылка на Twitter"
                   >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/twitter.svg"
-                      alt="Twitter"
-                    />
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -219,11 +218,9 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/facebook.svg"
-                      alt="Facebook"
-                    /> 
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -232,11 +229,9 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                   <img
-                      class="img-team-social-element"
-                      src="./images/linkedin.svg"
-                      alt="LinkedIn"
-                    />
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
                   </a>
                 </li>
               </ul>
@@ -253,55 +248,31 @@
               <p class="position-team" lang="en">Frontend Developer</p>
               <ul class="list-social-network">
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Instagram"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/instagram.svg"
-                      alt="instagram"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Twitter"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/twitter.svg"
-                      alt="Twitter"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Facebook"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/facebook.svg"
-                      alt="Facebook"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на LinkedIn"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/linkedin.svg"
-                      alt="LinkedIn"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -318,55 +289,31 @@
               <p class="position-team" lang="en">Marketing</p>
               <ul class="list-social-network">
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Instagram"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/instagram.svg"
-                      alt="instagram"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Twitter"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/twitter.svg"
-                      alt="Twitter"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Facebook"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/facebook.svg"
-                      alt="Facebook"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на LinkedIn"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/linkedin.svg"
-                      alt="LinkedIn"
-                    />
+                  <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -381,60 +328,36 @@
               />
               <h3 class="team">Иван Николаев</h3>
               <p class="position-team" lang="en">UI Designer</p>
-              <ul class="list-social-network">
-                <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Instagram"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/instagram.svg"
-                      alt="instagram"
-                    />
-                  </a>
-                </li>
-                <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Twitter"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/twitter.svg"
-                      alt="Twitter"
-                    />
-                  </a>
-                </li>
-                <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на Facebook"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/facebook.svg"
-                      alt="Facebook"
-                    />
-                  </a>
-                </li>
-                <li class="social-network-element">
-                  <a
-                    class="active-social-link"
-                    href=""
-                    aria-label="Ссылка на LinkedIn"
-                  >
-                    <img
-                      class="img-team-social-element"
-                      src="./images/linkedin.svg"
-                      alt="LinkedIn"
-                    />
-                  </a>
-                </li>
-              </ul>
+            <ul class="list-social-network">
+              <li class="social-network-element">
+                <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-element">
+                <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-element">
+                <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-network-element">
+                <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
+                  <svg class="instagram-icon-team">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
             </li>
           </ul>
         </div>
@@ -445,34 +368,42 @@
           <h2 class="main-info">Постоянные клиенты</h2>
           <ul class="list-clients">
             <li class="client-item">
-              <a class="logo-client" href=""
-                ><img src="./images/logo_1.svg" alt=""
-              /></a>
+              <a class="logo-client" href="">
+                <svg class="icon" width="80" height="42"> 
+                  <use href="./images/sprite.svg#icon-logo_1"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
-                ><img src="./images/logo_2.svg" alt=""
-              /></a>
+                ><svg class="icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_2" ></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
-                ><img src="./images/logo_3.svg" alt=""
-              /></a>
+                ><svg class="icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_3" ></use>
+                </svg></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
-                ><img src="./images/logo_4.svg" alt=""
-              /></a>
+                ><svg class="icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_4"></use>
+                </svg></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
-                ><img src="./images/logo_5.svg" alt=""
-              /></a>
+                ><svg class="icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_5"></use>
+                </svg></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
-                ><img src="./images/logo_6.svg" alt=""
-              /></a>
+                ><svg class="icon" width="80" height="42">
+                  <use href="./images/sprite.svg#icon-logo_6"></use>
+                </svg></a>
             </li>
           </ul>
         </div>
@@ -497,38 +428,34 @@
           <!--Hero секция-->
           <ul class="social-link-list">
             <li class="active-social-link-footer">
-              <a class="footer-social-link insta-footer" href="" aria-label="Ссылка на Instagram"
+              <a class="footer-social-link" href="" width="44" height="44"aria-label="Ссылка на Instagram"
                 >
-                <!--<img
-                  class="img-social-footer"
-                  src="./images/instagram.svg"
-                  alt="instagram"
-              />-->
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
             </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link twitter-footer" href="" aria-label="Ссылка на Twitter"
-                ><!--<img
-                  class="img-social-footer"
-                  src="./images/twitter.svg"
-                  alt="Twitter"
-              />--></a>
+              <a class="footer-social-link" href="" aria-label="Ссылка на Twitter"
+                >
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link facebook-footer" href="" aria-label="Ссылка на Facebook"
-                ><!--<img
-                  class="img-social-footer"
-                  src="./images/facebook.svg"
-                  alt="Facebook"
-              />--></a>
+              <a class="footer-social-link" href="" aria-label="Ссылка на Facebook"
+                >
+                <svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link linkedin-footer" href="" aria-label="Ссылка на LinkedIn"
-                ><!--<img
-                  class="img-social-footer"
-                  src="./images/linkedin.svg"
-                  alt="LinkedIn"
-              />-->
+              <a class="footer-social-link" href="" aria-label="Ссылка на LinkedIn"
+                ><svg class="icon-footer">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
             </a>
             </li>
           </ul>
