--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
       <ul class="contacts">
         <li class="contacts-element-1">
           <a class="info icon-mail" href="">
-            <svg class="icon-mail" width="16" height="12"> 
-              <use
-              href="./images/sprite.svg#icon-mail"></use>
+            <svg class="icon-mail" width="16" height="12">
+              <use href="./images/sprite.svg#icon-mail"></use>
             </svg>
-            info@devstudio.com</a>
+            info@devstudio.com</a
+          >
         </li>
         <li class="contacts-element-2">
           <a class="info icon-smartphone" href="">
             <svg class="icon-smartphone" width="10" height="15">
               <use href="./images/sprite.svg#icon-smartphone"></use>
             </svg>
-            +38 096 111 11 11</a>
+            +38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -85,11 +86,11 @@
                           />
                         </div>-->
             <div class="advantages">
-            <h3 class="h3-advantages icon-clock">Пунктуальность</h3>
-            <p class="about-advantages">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
+              <h3 class="h3-advantages icon-clock">Пунктуальность</h3>
+              <p class="about-advantages">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
             </div>
           </li>
           <li class="advantages-card">
@@ -101,11 +102,11 @@
               />
             </div>-->
             <div class="advantages">
-            <h3 class="h3-advantages icon-diagrama">Планирование</h3>
-            <p class="about-advantages">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
+              <h3 class="h3-advantages icon-diagrama">Планирование</h3>
+              <p class="about-advantages">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
             </div>
           </li>
           <li class="advantages-card">
@@ -116,12 +117,14 @@
                 alt="Космонавт"
               />
             </div>-->
-            <div class="advantages"></div>
-            <h3 class="h3-advantages icon-astronaut">Современные технологии</h3>
-            <p class="about-advantages">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
+            <div class="advantages">
+              <h3 class="h3-advantages icon-astronaut">
+                Современные технологии
+              </h3>
+              <p class="about-advantages">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
             </div>
           </li>
         </ul>
@@ -196,9 +199,9 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -229,9 +232,9 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
                   </a>
                 </li>
               </ul>
@@ -248,28 +251,44 @@
               <p class="position-team" lang="en">Frontend Developer</p>
               <ul class="list-social-network">
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Instagram"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Twitter"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Facebook"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на LinkedIn"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
@@ -289,28 +308,44 @@
               <p class="position-team" lang="en">Marketing</p>
               <ul class="list-social-network">
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Instagram"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Twitter"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Facebook"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social-network-element">
-                  <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на LinkedIn"
+                  >
                     <svg class="instagram-icon-team">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
@@ -328,36 +363,52 @@
               />
               <h3 class="team">Иван Николаев</h3>
               <p class="position-team" lang="en">UI Designer</p>
-            <ul class="list-social-network">
-              <li class="social-network-element">
-                <a class="active-social-link" href="" aria-label="Ссылка на Instagram">
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-network-element">
-                <a class="active-social-link" href="" aria-label="Ссылка на Twitter">
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-network-element">
-                <a class="active-social-link" href="" aria-label="Ссылка на Facebook">
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-network-element">
-                <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn">
-                  <svg class="instagram-icon-team">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+              <ul class="list-social-network">
+                <li class="social-network-element">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Instagram"
+                  >
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-element">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Twitter"
+                  >
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-element">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на Facebook"
+                  >
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-network-element">
+                  <a
+                    class="active-social-link"
+                    href=""
+                    aria-label="Ссылка на LinkedIn"
+                  >
+                    <svg class="instagram-icon-team">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -369,7 +420,7 @@
           <ul class="list-clients">
             <li class="client-item">
               <a class="logo-client" href="">
-                <svg class="icon" width="80" height="42"> 
+                <svg class="icon" width="80" height="42">
                   <use href="./images/sprite.svg#icon-logo_1"></use>
                 </svg>
               </a>
@@ -377,33 +428,33 @@
             <li class="client-item">
               <a class="logo-client" href=""
                 ><svg class="icon" width="80" height="42">
-                  <use href="./images/sprite.svg#icon-logo_2" ></use>
+                  <use href="./images/sprite.svg#icon-logo_2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
                 ><svg class="icon" width="80" height="42">
-                  <use href="./images/sprite.svg#icon-logo_3" ></use>
-                </svg></a>
+                  <use href="./images/sprite.svg#icon-logo_3"></use></svg
+              ></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
                 ><svg class="icon" width="80" height="42">
-                  <use href="./images/sprite.svg#icon-logo_4"></use>
-                </svg></a>
+                  <use href="./images/sprite.svg#icon-logo_4"></use></svg
+              ></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
                 ><svg class="icon" width="80" height="42">
-                  <use href="./images/sprite.svg#icon-logo_5"></use>
-                </svg></a>
+                  <use href="./images/sprite.svg#icon-logo_5"></use></svg
+              ></a>
             </li>
             <li class="client-item">
               <a class="logo-client" href=""
                 ><svg class="icon" width="80" height="42">
-                  <use href="./images/sprite.svg#icon-logo_6"></use>
-                </svg></a>
+                  <use href="./images/sprite.svg#icon-logo_6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -428,35 +479,47 @@
           <!--Hero секция-->
           <ul class="social-link-list">
             <li class="active-social-link-footer">
-              <a class="footer-social-link" href="" width="44" height="44"aria-label="Ссылка на Instagram"
-                >
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на Instagram"
+              >
                 <svg class="icon-footer">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
-            </a>
+              </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link" href="" aria-label="Ссылка на Twitter"
-                >
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на Twitter"
+              >
                 <svg class="icon-footer">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link" href="" aria-label="Ссылка на Facebook"
-                >
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на Facebook"
+              >
                 <svg class="icon-footer">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="active-social-link-footer">
-              <a class="footer-social-link" href="" aria-label="Ссылка на LinkedIn"
+              <a
+                class="footer-social-link"
+                href=""
+                aria-label="Ссылка на LinkedIn"
                 ><svg class="icon-footer">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
-            </a>
+              </a>
             </li>
           </ul>
         </div>
